@@ -1,6 +1,8 @@
 20020622
  - (djm) Update README.privsep; spotted by fries@
  - (djm) Release 3.3p1
+ - (bal) getopt now can be staticly compiled on those platforms missing
+   optreset.  Patch by binder@arago.de
 
 20020621
  - (djm) Sync:
@@ -1004,4 +1006,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2240 2002/06/21 15:44:45 djm Exp $
+$Id: ChangeLog,v 1.2241 2002/06/22 00:26:59 mouring Exp $
